Fix right alignment

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -296,6 +296,10 @@ $p-small-lh-diff: map-get($line-heights, default-text) - map-get($line-heights, 
     margin-right: 1px;
     padding: 0 1rem 1rem;
 
+    &:nth-child(3n+3){
+      padding-right: 0;
+    }
+
     &:active {
       background-color: $colors--light-theme--background-active;
     }
